--- a/style.css
+++ b/style.css
@@ -6,3 +6,10 @@
 body {
   background-color: #14161C;
 }
+
+#header-container {
+  box-sizing: border-box;
+  border-bottom: 1px;
+  border-bottom-style: solid;
+  border-bottom-color: #585858 ;
+}
